--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -17,7 +17,7 @@ nav ul {
   display: flex;
   padding: 10px;
   margin: 0;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
 }
 
 nav ul li {
